server/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: university-app
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3333
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3333
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
